# libsomanetwork

./: .gitignore  .gitmodules  AUTHORS  CHANGES  CMakeLists.txt  FindEvent.cmake  INSTALL  Makefile  Makefile.am  README  TSPipeFifo.txt  configure.ac  datareceiver.cc  datareceiver.h  datareceiver_test.cc  eventdispatcher.cc  eventdispatcher.h  eventreceiver.cc  eventreceiver.h  eventreceiver_test.cc  eventsender.cc  eventsender.h  eventtests.cc  eventtests.h  fakenetwork.cc  fakenetwork.h  main.cc  network.cc  network.design.txt  network.h  network_bench.cc  network_test.cc  networkinterface.h  packetreceiver.h  ports.h  somanetwork-1.0.pc.in  somanetwork.pc.in  tests.cc  tests.h  tspipefifo.h  (+4 more)
benchmarks/: CMakeLists.txt  Makefile  Makefile.am  audiogen.cc  audiogen.h  datatx.txt  digitaloutgen.cc  digitaloutgen.h  digitaloutgen.py  eventrx.cc  eventrx.txt  eventsource.h  eventsynthtx.cc  eventsynthtx.h  glibbench.cc  glibbench.txt  periodicpattern.cc  periodicpattern.h  range.cc  range.h  synthtx.cc
benchmarks/timers/: timehist.py  timertest.cc
data/: Makefile  event.h  event_test.cc  event_test.py  eventtx.h  rawdata.h  tspike.h  tspike_test.cc  tspike_test.py
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  libsomanetwork-default.ex  libsomanetwork.doc-base.EX  libsomanetwork.substvars  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
docs/: LOGGING  TSPipeFifo.txt  datareceiver.txt  dispatch.txt  domain_interface.txt  eventreceiver.txt  eventtx.txt  network.design.txt  seqpacketproto.py  seqpacketproto.rst  test_seqpacketproto.py
examples/: README
examples/simpleevents/: Makefile.simple  README  simpleevents.cc
examples/simplereader/: Makefile.simple  simplereader.cc
python/: Makefile  fooprof  hello.cc  hellotest.py  network.cc  network.txt  networktest.py
somanetwork/: CMakeLists.txt  Makefile.am  datapacket.h  datareceiver.cc  datareceiver.h  domainsockproxy.cc  domainsockproxy.h  event.cc  event.h  eventdispatcher.cc  eventdispatcher.h  eventreceiver.cc  eventreceiver.h  eventsender.cc  eventsender.h  eventtx.cc  eventtx.h  fakenetwork.cc  fakenetwork.h  logging.cc  logging.h  lossydatareceiver.cc  lossydatareceiver.h  netsockproxy.cc  netsockproxy.h  network.cc  network.h  networkinterface.h  packetreceiver.h  packetsequence.h  ports.h  raw.cc  raw.h  seqpktproto.h  sockproxy.h  soma_event.cc  tspike.cc  tspike.h  tspipefifo.h  wave.cc  (+1 more)
src/: Makefile.am  datapacket.h  datareceiver.cc  datareceiver.h  event.cc  event.h  eventdispatcher.cc  eventreceiver.cc  eventreceiver.h  eventsender.cc  eventsender.h  eventtx.h  fakenetwork.cc  fakenetwork.h  network.cc  network.h  networkinterface.h  packetreceiver.h  ports.h  raw.cc  raw.h  tspike.cc  tspike.h  tspipefifo.h  wave.cc  wave.h
src/data/: tspike.h
tests/: CMakeLists.txt  Makefile  Makefile.am  README  boost.supp  canonical.cc  canonical.h  datareceiver.README  datareceiver_test.cc  dispatcher_test.cc  domainsockproxy_test.cc  event_test.cc  eventreceiver_test.cc  eventsender_test.cc  eventtests.cc  eventtests.h  eventtx_test.cc  eventtxtests.cc  fakeeventserver.cc  fakeeventserver.h  gmon.out  logging_test.cc  network_bench.cc  network_test.cc  packetsequence_test.cc  packetsequnce_test.cc  raw_test.cc  runner  runner.cc  seqpktproto_test.cc  test_config.h.in  tests.cc  tests.h  tiny_test.cc  tspike_test.cc  tspike_test.py  tspipefifo_bench.cc  tspipefifo_test.cc  wave_test.cc
