## Makefile.am -- Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS = \
	1.4 \
	foreign \
	dist-bzip2 \
	foreign

SUBDIRS = src

AM_CXXFLAGS = -fpic

bin_PROGRAMS=

#Distribute these directories:
#DIST_SUBDIRS = $(GENERIC_LIBRARY_NAME)

#pkgconfigdir = $(libdir)/pkgconfig
#pkgconfig_DATA = examplelib-1.0.pc

#EXTRA_DIST=autogen.sh
